--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "program": "${workspaceFolder}/bin/Debug/net5.0/conversion.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
-            "console": "intergratedTerminal",
+            "console": "integratedTerminal",
             "stopAtEntry": false
         },
         {
